<resources>
    <string name="app_name">PADMA</string>
    <string name="title_activity_home">PADMA</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string-array name="batch">
        <item>23th Batch</item>
        <item>24th Batch</item>
        <item>25th Batch</item>
        <item>26th Batch</item>
        <item>27th Batch</item>
        <item>29th Batch</item>
        <item>30th Batch</item>
        <item>31th Batch</item>
        <item>32th Batch</item>
        <item>33th Batch</item>
    </string-array>
    <string-array name="panelsession">
        <item>2019-2020</item>
    </string-array>
    <string-array name="batch23name">
        <item>Al amin</item>
        <item>Khorshed</item>
        <item>Liton</item>
        <item>Rofik</item>
        <item>Bari</item>
        <item>Jahanjir</item>
        <item>Mili</item>
        <item>Nahid</item>
        <item>Rian</item>
        <item>Sumon</item>
        <item>Taz</item>
        <item>Masud</item>
        <item>Munna</item>
        <item>Mustafiz</item>
        <item>Sham</item>
        <item>Aminul</item>
        <item>Amzad</item>
        <item>Bashar</item>
        <item>Fultola</item>
        <item>Hasan</item>
        <item>Mamun(biddut )</item>
        <item>Mamun(HUAWAI)</item>
        <item>Mehedi</item>
        <item>Shakil</item>
        <item>Badshah</item>
        <item>Delewer</item>
        <item>Hakim</item>
        <item>Khaled</item>
        <item>Kushum</item>
        <item>Mojammel</item>
        <item>Shahin</item>
        <item>Saju</item>
        <item>Shima</item>
        <item>Mamun</item>
    </string-array>
    <string-array name="batch23department">
        <item>NO</item>
        <item>NO</item>
        <item>ME</item>
        <item>CSE</item>
        <item>CE</item>
        <item>CE</item>
        <item>CE</item>
        <item>CE</item>
        <item>CE</item>
        <item>CE</item>
        <item>CE</item>
        <item>CSE</item>
        <item>CSE</item>
        <item>CSE</item>
        <item>CSE</item>
        <item>EEE</item>
        <item>EEE</item>
        <item>EEE</item>
        <item>EEE</item>
        <item>EEE</item>
        <item>EEE</item>
        <item>EEE</item>
        <item>EEE</item>
        <item>EEE</item>
        <item>ME</item>
        <item>ME</item>
        <item>ME</item>
        <item>ME</item>
        <item>ME</item>
        <item>ME</item>
        <item>ME</item>
        <item>ME</item>
        <item>ME</item>
        <item>CE</item>
    </string-array>
    <string-array name="batch23number">
        <item>01550156259</item>
        <item>01550155135</item>
        <item>01740649405</item>
        <item>01557422468</item>
        <item>01920849065</item>
        <item>01710841232</item>
        <item>01725737298</item>
        <item>01715715555</item>
        <item>01715715144</item>
        <item>01737055535</item>
        <item>01710315081</item>
        <item>01718881499</item>
        <item>01914959087</item>
        <item>01724007134</item>
        <item>01550156342</item>
        <item>01717384747</item>
        <item>01716172793</item>
        <item>01923237981</item>
        <item>01722465022</item>
        <item>01712415108</item>
        <item>01912419620</item>
        <item>01717402759</item>
        <item>01710220080</item>
        <item>0179452365</item>
        <item>0171136951</item>
        <item>01718213406</item>
        <item>01920330134</item>
        <item>01924357199</item>
        <item>01718986746</item>
        <item>01710338008</item>
        <item>0179168356</item>
        <item>01717067585</item>
        <item>01913800391</item>
        <item>01717623655</item>
    </string-array>
    <string-array name="batch24name">
        <item>Shamim</item>
        <item>Tarek</item>
        <item>Rashed</item>
        <item>Shagore</item>
        <item>Benogir</item>
        <item>Juwel</item>
        <item>Tonyama</item>
        <item>Nazmul</item>
        <item>Sathi</item>
        <item>Tipu</item>
        <item>Bokul</item>
        <item>Rajibul</item>
        <item>Rubel</item>
        <item>Shibdas</item>
        <item>Shohidul</item>
        <item>Shopon</item>
        <item>Baki</item>
        <item>Bappi</item>
        <item>Eqbal</item>
        <item>Manik</item>
        <item>Noyon</item>
        <item>Rezwan</item>
        <item>Shamim</item>
        <item>Torik</item>

    </string-array>
    <string-array name="batch24department">
        <item>CE</item>
        <item>CE</item>
        <item>CE</item>
        <item>CE</item>
        <item>CE</item>
        <item>CE</item>
        <item>CE</item>
        <item>CSE</item>
        <item>CSE</item>
        <item>CSE</item>
        <item>EEE</item>
        <item>EEE</item>
        <item>EEE</item>
        <item>EEE</item>
        <item>EEE</item>
        <item>EEE</item>
        <item>ME</item>
        <item>ME</item>
        <item>ME</item>
        <item>ME</item>
        <item>ME</item>
        <item>ME</item>
        <item>ME</item>
        <item>ME</item>

    </string-array>
    <string-array name="batch24number">
        <item>01724384262</item>
        <item>01719897991</item>
        <item>01719364537</item>
        <item>01714258542</item>
        <item>01724595295</item>
        <item>01737436197</item>
        <item>01671559118</item>
        <item>01747106321</item>
        <item>01747106321</item>
        <item>01732993209</item>
        <item>01717289016</item>
        <item>01553572780</item>
        <item>01716728131</item>
        <item>01721714953</item>
        <item>01722249835</item>
        <item>01722249535</item>
        <item>01728357100</item>
        <item>01723995542</item>
        <item>01716407926</item>
        <item>01558877368</item>
        <item>01717136893</item>
        <item>01721517114</item>
        <item>01716525175</item>
        <item>01722711072</item>
    </string-array>
    <string-array name="batch25name">
        <item>Asraful</item>
        <item>Kishor</item>
        <item>Mizan</item>
        <item>Raju</item>
        <item>Rumel</item>
        <item>Masuma</item>
        <item>Rasel</item>
        <item>Sobuj</item>
        <item>Sujon</item>
        <item>Uzzal</item>
        <item>Emran</item>
        <item>Mamun</item>
        <item>Mizan</item>
        <item>Wahid</item>
        <item>Durjoy</item>
        <item>Monir</item>
        <item>Ronok</item>
        <item>Sohel</item>
        <item>Md . Jannat</item>

    </string-array>
    <string name="NahidulHaque">
        Aasalamualaikum. welcome to our non political and beloved  association named "padma welfare association of DUET".This association works for it is members good, like admissions, coaching, book support, personal problems also. So I invite all DUET students to join here, or wish for it is successful journey. I feel proud to serve this association.I apply to all executive of padma make a target every year so that we can help from our side. I also want to thanks all padma members for their achievements that they have done. Now they are going to do a best job. I wishes them for it is every success. So come forward and think boundless for mankind.\n\n
    </string>
    <string name="sumon">
        ডুয়েট আঙিনায়  ভর্তি কোচিং সমূহের মধ্যে বর্তমানে কনফিডেন্ট কোচিং সেন্টার অন্যতম। ভাবলে অনেক ভালো লাগে,  পুলকিত হয়, আবেগে  আপ্লুত হই বারবার। আমরা কনফিডেন্ট কোচিং সেন্টার এর কার্যক্রম শুরু করেছিলাম 2009 সালে। অনেকটা সময় অতিবাহিত হয়েছে। এর সুফল পেতে শুরু করেছে রাজশাহী অঞ্চলের ডুয়েট ভর্তিচ্ছুশিক্ষার্থীরা। কোচিং আজ সু প্রতিষ্ঠিত ভাবতে খুব ভাল লাগে তবে কোচিং শুরুর অভিজ্ঞতা  খুব একটা সুখের ছিল না । কোচিং প্রতিষ্ঠায়  মিশে আছে অনেকের ত্যাগ, অক্লান্ত পরিশ্রম ও অদমনীয় প্রচেষ্টা। রাজশাহী অঞ্চলের ছাত্র-ছাত্রীদের জন্য ডুয়েট ভর্তির কোন আঞ্চলিক কোচিং ছিল না। এই অঞ্চলের ভর্তিচ্ছু শিক্ষার্থীরা অন্যান্য আঞ্চলিক কোচিং এ ভর্তি হত। ফলে ভর্তি প্রস্তুতির ক্ষেত্রে যথাযথ দিকনির্দেশনা সে সময় তারা পেত না। আবাসনের ক্ষেত্রেও নিজেদের ব্যবস্থা করে থাকতে হতো। এছাড়া যে কোনো অনাকাঙ্ক্ষিত পরিস্থিতিতেও তারা অসহায় বোধ করত। আমাদের কোন আঞ্চলিক কোচিং না থাকার ফলে সিনিয়র ভাইদের সাথে খুব একটা পরিচয় ঘটতো না। ফলে  ভর্তির দিকনির্দেশনা আমরা থাকতামপিছিয়ে।বিধায় সে সময় আমাদের একটা কিছু করা খুবই জরুরি হয়ে পড়ে। ফলশ্রুতিতে পদ্মার সকল সদস্যের সম্মতিক্রমে ও সহযোগিতায় আমরা কনফিডেন্স কোচিং সেন্টার চালু করেছিলাম। কনফিডেন্স কোচিং সেন্টার আজ অনেকটা পথ পাড়ি দিয়ে সফলতার সাথে  এগিয়ে যাচ্ছে । ক্ষুদ্র পরিসরে  যে কোচিং  শুরু করেছিলাম তা আজ বৃহদাকার  ধারণ করেছে। কনফিডেন্স কোচিং সেন্টারের প্রতিষ্ঠাতা পরিচালক হিসেবে আমি কোচিং এর সুনাম বৃদ্ধি সহ, উত্তর উত্তর সমৃদ্ধি,  উন্নতি ও সফলতা কামনা করছি।\n\n

    </string>
    <string name="jasim">
        PADMA(Rajshahi student welfare association, DUET) is a good association of DUET.The Padma is a not only Rajshahi student helpline association but also helping the admitted  student. The admission coaching center controlled by Padma. Padma association create by the Rajshahi and the nearest district. Padma no of student 100+ . All present member communication is good by enjoying the sports, exam annual tour, meeting, party.I also help the association within a digitalized. Many x students help us anyway.I hope this association developed day by day improves.\n\n
    </string>
    <string name="biplob">
        Padma is a welfare association of the students of DUET which works for the wellbeing of student members.The organization has some responsibilities such as admission care for whom dream of DUET as well as coaching facility for them. The undergrad students have a support for books and materials along with mentoring for personal problem solving and so on. All that matters to the unity is to build a bridge for combining the chemistry of relations between seniors and juniors through different events. In each year,on behalf of the organization, we arrange tours to energize the new faces in DUET campus. We plan programs to have nice get-together what makes environments for networking. That is how the river like organization “Padma” gives water to the dreams and the relationships as it has been giving. I wish all the best for the organization to serve pupils in the long run.\n\n

    </string>
    <string name="habib">
        Padma is the birthplace of the life of education city Rajshahi, with a huge spread like the Padma River. Where as the Rajshahi name has been given to the flag of Bangladesh,the organization, which has been working diligently and hard work to establish DUET students and Diploma engineers as B.Sc engineers.This organization is a gathering for the fraternity and development of all students and carers of Greater Rajshahi. Whose mother teaches everyone to move in unison.\n\n

    </string>
    <string name="tareq">
        Aasalamualaikum, Welcome to our non political and beloved association named "Padma” Rajshahi students welfare association of DUET.This association works for it is members good, like as admissions, coaching,book support, personal problems also. So I invite all rajshahi DUETian to join here, Be cause, Unity is a key to success for any team. If we have to work with other people, then it becomes quite important to cooperate with them because every person has a different thinking and a different view towards every situation. However,it is a bit difficult to live with unity with different people.There are many examples in this world where unity is maintained and where unity is endangered.I also want to thanks all padma members for their achievements that they have done. Now they are going to do a best job.I wishes them for it is every success.\n\n

    </string>
</resources>