<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.spal.sajibpal.padma.Padmabanni">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="110dp"
            android:layout_height="120dp"
            android:scaleType="fitXY"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/nahid"/>
       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:padding="10dp"
           android:textColor="#fff"
           android:textSize="20sp"
           android:layout_gravity="center_horizontal"
           android:textAlignment="center"
           android:text=" S A Md. Nahidul Haque,\n Ex- President(2009-10), PADMA\n"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#fff"
            android:textSize="18sp"
            android:paddingLeft="15dp"
            android:textAlignment="textStart"
            android:text="@string/NahidulHaque"/>

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:scaleType="fitCenter"
            android:src="@drawable/sumjon"
            android:layout_gravity="center_horizontal"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textColor="#fff"
            android:textSize="20sp"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center"
            android:text="মোঃসুমন\n সহকারী পরিচালক (প্রকৌশল পুর)\nবাংলাদেশ ব্যাংক।\n"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#fff"
            android:textSize="18sp"
            android:paddingLeft="15dp"
            android:textAlignment="textStart"
            android:text="@string/sumon"/>
        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:scaleType="fitXY"
            android:src="@drawable/habib"
            android:layout_gravity="center_horizontal"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textColor="#fff"
            android:textSize="20sp"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center"
            android:text="Md. Ahosan Habib\nAssistant Director (Engg.-Mechanical)\nBangladesh Bank, Rajshahi\n"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#fff"
            android:textSize="18sp"
            android:paddingLeft="15dp"
            android:textAlignment="textStart"
            android:text="@string/habib"/>


        <ImageView
            android:layout_width="110dp"
            android:layout_height="125dp"
            android:scaleType="fitXY"
            android:src="@drawable/bploba"
            android:layout_gravity="center_horizontal"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textColor="#fff"
            android:textSize="20sp"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center"
            android:text="Biplob Chandra Saha\nPresident, PADMA\n"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#fff"
            android:textSize="18sp"
            android:paddingLeft="15dp"
            android:textAlignment="textStart"
            android:text="@string/biplob"/>

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:scaleType="fitXY"
            android:src="@drawable/tareq"
            android:layout_gravity="center_horizontal"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textColor="#fff"
            android:textSize="20sp"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center"
            android:text="Md.Tareq Rahman\nVice-president,PADMA\n"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#fff"
            android:textSize="18sp"
            android:paddingLeft="15dp"
            android:textAlignment="textStart"
            android:text="@string/tareq"/>

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:scaleType="fitXY"
            android:src="@drawable/jasim"
            android:layout_gravity="center_horizontal"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textColor="#fff"
            android:textSize="20sp"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center"
            android:text="Md. Josim Uddin\nSenior Vice-President, PADMA\n"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#fff"
            android:textSize="18sp"
            android:paddingLeft="15dp"
            android:textAlignment="textStart"
            android:text="@string/jasim"/>


    </LinearLayout>

</ScrollView>
